--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.546.0",
     "mongoose": "^8.19.1",
     "next": "15.5.6",
