--- a/my-app/package.json
+++ b/my-app/package.json
@@ -44,6 +44,7 @@
     "input-otp": "^1.2.4",
     "jose": "^6.1.0",
     "lucide-react": "^0.441.0",
+    "mongoose": "^8.19.2",
     "motion": "^10.18.0",
     "next": "^14.2.0",
     "next-themes": "^0.4.6",
